2004-05-04  Angus Leeming  <angus.leeming@btopenworld.com>

	The original patch, posted to the xforms list on June 21, 2002,
	appears to have got lost. Archived here:
	http://bob.usuhs.mil/mailserv/list-archives/xforms-archive/0285.html

	Pass the associated (XEvent * xev) to fl_handle_object on an FL_DRAW
	event. This XEvent * is not used at all by any of xforms' "native"
	widgets, but an FL_FREE object is able to make use of this info to
	redraw only the part of the window that has changed. 
 
	* forms.c (fl_handle_form): pass the XEvent on an FL_DRAW event.

	* objects.c (redraw_marked): pass the XEvent to fl_handle_object.
	(mark_for_redraw): new, static function containing all but the
	'redraw_marked' call of the original fl_redraw_form.
	(fl_redraw_form): refactored code. Functionality unchanged.
	(fl_redraw_form_using_xevent): identical to fl_redraw_form, except
	that it passes the XEvent on to redraw_marked.

2004-05-02  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/flresource.c (get_command_name): squash valgrind warning
	about a possible memory leak.

2004-04-30  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/Makefile.am, fdesign/Makefile.am: silence automake
	warning about trailing backslash on last line of file.

2004-04-20  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/xpopup.c (fl_freepup): do not free unallocated entries
	(fl_setpup_maxpup): do not forget to reset parent and window in
	newly created menu_rec entries

2004-04-19  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* demos/Makefile.am (glwin_LDADD, gl_LDADD): fix ordering of
	libraries
	(LDFLAGS): rename from AM_LDFLAGS (automake 1.5 did not like that)

	* config/xformsinclude.m4 (XFORMS_PROG_CC): fix description of
	--enable-debug

2004-04-05  Angus Leeming  <angus.leeming@btopenworld.com>

	* Dummy commit to check all is well with my account.

2004-04-01  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/flresource.c (fl_get_resource): when a resource is a